--- a/index.html
+++ b/index.html
@@ -1,60 +1,66 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Мой Telegram-бот</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Классный Telegram-бот</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f6f8;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(135deg, #00c6ff, #0072ff);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: white;
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      margin: 0;
-    }
-
-    .card {
-      background: white;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      max-width: 400px;
       text-align: center;
     }
 
+    .container {
+      max-width: 600px;
+      padding: 2rem;
+      background: rgba(0, 0, 0, 0.3);
+      border-radius: 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+    }
+
     h1 {
-      font-size: 24px;
+      font-size: 36px;
       margin-bottom: 1rem;
     }
 
     p {
-      font-size: 16px;
-      margin-bottom: 2rem;
+      font-size: 18px;
+      line-height: 1.6;
     }
 
-    a.button {
+    .button {
+      margin-top: 2rem;
       display: inline-block;
-      background-color: #0088cc;
-      color: white;
+      background: white;
+      color: #0072ff;
       padding: 12px 24px;
-      border-radius: 8px;
+      border-radius: 30px;
       text-decoration: none;
       font-weight: bold;
-      transition: background-color 0.3s ease;
+      transition: background 0.3s;
     }
 
-    a.button:hover {
-      background-color: #0077b3;
+    .button:hover {
+      background: #e6e6e6;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Познакомьтесь с нашим Telegram-ботом!</h1>
-    <p>Бот поможет вам <strong>быстро и удобно</strong> получать нужную информацию прямо в Telegram.</p>
-    <a class="button" href="https://t.me/your_bot_username" target="_blank">Запустить бота</a>
+  <div class="container">
+    <h1>Это не просто бот. Это <em>супербот</em>!</h1>
+    <p>
+      Он умный, быстрый и всегда рядом. Поможет с задачами, подскажет нужное, не даст заскучать.<br><br>
+      Ты еще не с ним? Тогда самое время познакомиться!
+    </p>
+    <a class="button" href="https://t.me/your_bot_username" target="_blank">Попробовать бота</a>
   </div>
 </body>
 </html>
