--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       Он умный, быстрый и всегда рядом. Поможет с задачами, подскажет нужное, не даст заскучать.<br><br>
       Ты еще не с ним? Тогда самое время познакомиться!
     </p>
-    <a class="button" href="https://t.me/your_bot_username" target="_blank">Попробовать бота</a>
+    <a class="button" href="https://t.me/NataliaTNF_Bot" target="_blank">Попробовать бота</a>
   </div>
 </body>
 </html>
