--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
   <div class="container">
     <h1>Это не просто бот. Это <em>супербот</em>!</h1>
     <p>
-      Он умный, быстрый и всегда рядом. Поможет с задачами, подскажет нужное, не даст заскучать.<br><br>
-      Ты еще не с ним? Тогда самое время познакомиться!
+      Бот для записи
+      Удобство 
+      гибкий график
+      и все все все
     </p>
     <a class="button" href="https://t.me/NataliaTNF_Bot" target="_blank">Попробовать бота</a>
   </div>
